# Snake-Spiel-mit-Astern-suche

./: .gitignore  CMakeLists.txt  CMakePresets.json  FindPathAStar.h  Food.cpp  Food.h  GameSetting.cpp  GameSetting.h  PrintInfo.h  README.md  Snake.cpp  Snake.h  main.cpp
